schema/testdata/validation_relationships_one_to_one_duplication_relation/schema.keel
model User {
    fields {
        student Student {
            @unique
            @relation(user)
        }
        student2 Student @unique
    }
}

model Student {
    fields {
        user User
        user2 User
    }
}
